@@ -28,7 +28,6 @@
 
 #include <QFont>
 #include <QGraphicsScene>
-#include <QGraphicsTextItem>
 #include <QGraphicsView>
 
 
@@ -53,14 +52,11 @@ KBBBallsGraphicWidget::KBBBallsGraphicWidget(const int ballSize, KBBThemeManager
 	m_ballsToPlace = 0;
 	m_ballWrong = NULL;
 	
-	setMaximumHeight(m_ballSize);
-	setAlignment(Qt::AlignLeft | Qt::AlignVCenter);
+	//setMaximumWidth(m_ballSize);
+	setAlignment(Qt::AlignHCenter | Qt::AlignBottom);
 	
 	m_scene = new QGraphicsScene(this);
 	setScene(m_scene);
-	
-	m_text = new QGraphicsTextItem(NULL, m_scene);
-	m_text->setFont(QFont("Helvetica", 2*KBBScalableGraphicWidget::RATIO/3));
 	
 	setPlacedBalls(0);
 }
@@ -86,10 +82,14 @@ void KBBBallsGraphicWidget::resizeEvent(QResizeEvent*)
 void KBBBallsGraphicWidget::setBallsToPlace(const int ballsToPlace)
 {
 	if (m_ballsToPlace != ballsToPlace) {
+		// remove all balls
+		m_ballsToPlace = 0;
+		setPlacedBalls(0);
+		
+		// set new value
 		m_ballsToPlace = ballsToPlace;
 		
-		//setMaximumWidth(m_ballSize*m_ballsToPlace);
-		m_scene->setSceneRect(0, 0, m_ballsToPlace*KBBScalableGraphicWidget::RATIO, KBBScalableGraphicWidget::RATIO);
+		m_scene->setSceneRect(0, 0, KBBScalableGraphicWidget::RATIO, m_ballsToPlace*KBBScalableGraphicWidget::RATIO);
 		resizeEvent(NULL);
 	}
 }
@@ -116,24 +116,12 @@ void KBBBallsGraphicWidget::setPlacedBalls(const int placedBalls)
 	// add balls
 	while (ballsLeftToPlace>m_balls.count()) {
 		m_balls.append(new KBBGraphicsItem(KBBScalableGraphicWidget::playerBall, m_scene, m_themeManager));
-		m_balls.last()->setPos((m_balls.count()-1)*KBBScalableGraphicWidget::RATIO,0);
+		m_balls.last()->setPos(0, (m_ballsToPlace-m_balls.count())*KBBScalableGraphicWidget::RATIO);
 	}
 	
 	// add "wrong" ball
 	while ((ballsLeftToPlace<0) && (m_ballWrong==NULL)) {
 		m_ballWrong = new KBBGraphicsItem(KBBScalableGraphicWidget::wrongPlayerBall, m_scene, m_themeManager);
+		m_ballWrong->setPos(0, (m_ballsToPlace-1)*KBBScalableGraphicWidget::RATIO);
 	}
-	if (ballsLeftToPlace<0) {
-		m_text->setPlainText(i18n("x %1 too much!", -ballsLeftToPlace));
-		m_text->setPos(KBBScalableGraphicWidget::RATIO,0);
-	}
-
-	if (ballsLeftToPlace==0) {
-		m_text->setPlainText(i18n("You're done!"));
-		m_text->setPos(0,0);
-	}
-	
-	if (ballsLeftToPlace>0)
-		m_text->setPlainText("");
-
 }
